[tool.poetry]
name = "pyroauth"
version = "0.1.0"
description = "A simple CLI that can create a client for pyrogram"
authors = ["sushka <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
click = "^8.1.7"

[tool.poetry.scripts]
pyroauth = "pyroauth.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
